[BENCH-530] Fix client id / secret render (#497)
* Fixes

* Backup

* testing

* Fixes

* Revert

* Cleanup

* PR comments

* PR comments